style.css
/* General Styles */
body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: #F5F4F6;
    color: #2D3142;
}

main,
section {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

h1,
h2 {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-align: center;
}

button {
    background-color: #FFFFFF;
    border: 2px solid #2D3142;
    height: 50px;
    width: 150px;
    /* Default button max size */
    max-height: 50px;
    max-width: 150px;
    color: #2D3142;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    transition-duration: 0.25s;
}

/* Classes for static elements */
.container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.container-with-frame {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 420px;
}

/* Classes (previously) for dynamic states (well not anymore as I am using templates) */
.to-do-list-frame {
    height: 95%;
    max-height: 370px;
    width: 23%;
    max-width: 300px;
    background-color: #D8D5DB;
    margin: 1%;
    transition-duration: 0.5s;
    display: flex;
    align-items: center;
    flex-direction: column;
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
    border-radius: 5px;
}

.to-do-list-frame:hover {
    margin-bottom: 1.2rem;
    box-shadow: 5px 5px 12px rgba(0, 0, 0, 0.3);
}

.tasks-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    width: 80%;
    height: 65%;
    border: 2px solid #2D3142;
    border-radius: 2px;
    overflow-y: auto;
    gap: 0.75rem;
    box-sizing: border-box;
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
}

.list-title {
    margin-top: 3%;
    margin-bottom: 0.5%;
    font-size: 2rem;
    text-align: center;
    /* This is just to make it look good while resizing in inspect lol */
    transition-duration: 0.5s;
}

.task-title {
    margin-top: 1%;
    font-size: clamp(0.7rem, 2.1vw, 1.6rem);
}

.add-task-button {
    margin: 8%;
    margin-right: 4%;
    background-color: #B0D7FF;
    width: 50%;
    height: 55%;
    font-size: clamp(0.75rem, 1.3vw, 0.8rem);
}

.add-task-button:hover {
    background-color: #89b9ea;
}

.buttons-container {
    height: 35%;
    /* Debug */
    /* background-color: #89b9ea; */
}

.delete-list-button {
    margin: 8%;
    margin-left: 4%;
    background-color: rgb(251, 137, 137);
    /* This button does not follow palette but follows conventions (delete button should be red) */
    width: 50%;
    height: 55%;
    font-size: clamp(0.75rem, 1.3vw, 0.8rem);
}

.delete-list-button:hover {
    background-color: rgb(228, 112, 112);
}

.task-div {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    width: 90%;
    min-height: 50px;
    background-color: #EAE8FF;
    border-radius: 10px;
}

.task-text-container {
    width: 80%;
    display: flex;
    justify-content: right;
    align-items: right;
    text-align: center;
}

.task-text {
    width: 100%;
    margin-left: 8px;
    font-size: clamp(0.5rem, 1.8vw, 1.2rem);
}

.task-delete-button-container {
    width: 23%;
    display: flex;
    justify-content: left;
    align-items: left;
}

.delete-task-button {
    aspect-ratio: 1 / 1;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(251, 137, 137);
    width: 50%;
    max-width: 30px;
    height: 100%;
    max-height: 30px;
    border-width: 1px;
    margin-left: 20%;
    font-size: clamp(0.1rem, 1.3vw, 0.8rem);
}


.delete-task-button:hover {
    background-color: rgb(228, 112, 112);
}

/* Classes for Dynamic States */

.stuck {
    position: fixed;
    transform: translateY(-25%);
    z-index: 1000;
}

/* Static ids */
/* #about-text {
    text-align: center;
    width: 90%;
} */

/* Transitions */
button:hover {
    background-color: #eaeaea;
}

/* Media Queries (for changing layouts on different devices e.g., tablet, mobile) */

@media (max-width: 900px) {
    .container-with-frame {
        flex-wrap: wrap;
    }

    .container-with-frame>* {
        width: 45%;
        margin: 1rem;
        height: 840px;
    }
}

@media (max-width: 670px) {
    .container-with-frame {
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
    }

    .container-with-frame>* {
        width: 300px;
        max-width: 300px;
        margin: 0.5rem auto;
    }

    .to-do-list-frame:hover {
        margin-bottom: 1.4% !important;
        box-shadow: 6px 6px 14px rgba(0, 0, 0, 0.3);
    }
}

@media (max-width: 480px) {
    .container-with-frame>* {
        width: 80%;
        max-width: 300px;
        margin: 0.5rem auto;
    }

    .list-title {
        font-size: 1.75rem;
    }
}

@media (max-width: 420px) {
    .list-title {
        font-size: 1.5rem;
    }
}

/* Did not optimise layout for screen widths < 290px as barely any modern devices have such a slim width. It's also just too skinny. */

